feat: add realistic admin moderation